tests/types_first_reasons/temporary_bool_dep.js
// @flow

const x = require('./temporary_bool');
(x: false); // error: true ~> false
